# rp2040_serial_sensor

./: CMakeLists.txt  README.md  uart.c
